--- a/views/themes/default/layout.jade
+++ b/views/themes/default/layout.jade
@@ -18,4 +18,5 @@ html
     script(type='text/javascript', src='/assets/themes/default/js/bootstrap.js')
     script(type='text/javascript', src='/assets/themes/default/js/jquery.grid-a-licious.min.js')
     script(type='text/javascript', src='/assets/themes/default/js/lodash.js')
-    script(type='text/javascript', src='/assets/themes/default/js/elastic.js')
+    script(type='text/javascript', src='/assets/javascript/js.cookie.js')
+    script(type='text/javascript', src='/assets/themes/default/js/default.js')
