--- a/public/app/partials/products/edit.html
+++ b/public/app/partials/products/edit.html
@@ -111,7 +111,7 @@
 								</div>
 								<div class="row"> 
 									<div class="col-sm-3">
-										<a href="/products/{{objProduct._id}}/delete" class="btn btn-danger btn-block">Delete</a>
+										<a href="/manage/products/{{objProduct._id}}/delete" class="btn btn-danger btn-block">Delete</a>
 									</div>
 									<div class="col-sm-9">
 										<input type="submit" ng-disabled="editProductForm.$invalid" value="Save Changes" class="btn btn-block btn-primary">
