--- a/public/app/partials/register.html
+++ b/public/app/partials/register.html
@@ -15,11 +15,11 @@
 					</span>
 					<input type="password" ng-model="register.password" placeholder="Password" autocomplete="off" class="form-control input-sm" required>
 				</div> 
-				<div class="input-group mb10">
+				<div class="input-group mb10 hide">
 					<span class="input-group-addon" id="basic-addon1">
 						<i class="glyphicon glyphicon-shopping-cart"></i>
 					</span>
-					<input type="text" ng-model="register.storename" placeholder="Shop Name" autocomplete="off" class="form-control input-sm" required>
+					<input type="text" ng-model="register.storename" placeholder="Shop Name" autocomplete="off" class="form-control input-sm">
 				</div>
 				<div class="input-group mb10">
 					<span class="input-group-addon" id="basic-addon1">
