--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html(ng-app='starterApp')
         link(rel='stylesheet', href='/assets/stylesheets/misc.css')
         script(src='/assets/javascript/lodash.js')
         script(src='/assets/javascript/angular.min.js')
+        script(src='/assets/javascript/angular-cookies.js')
         script(src='/assets/javascript/angular-route.js')
         script(src='/assets/javascript/angular-resource.js')
         script(src='/assets/javascript/angular-animate.js')
