--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-if="!me">
 	<div class="col-xs-12">
 		<table class="homeTable">
 			<tr>
@@ -22,4 +22,79 @@
 			</tr>
 		</table>
 	</div> 
+</div>
+
+<div id="homeProducts">
+	<div class="page-wrap" ng-if="isLoggedIn && me && !isManage">
+		<div class="page-body">
+			<div class="row"> 
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="#">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="#">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="#">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="#">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="#">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="#">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
