--- a/public/app/partials/products/delete.html
+++ b/public/app/partials/products/delete.html
@@ -12,7 +12,7 @@
 										<p>Are you sure you want to delete this product?</p>
 										<p>
 											<a href="#" ng-click="deletePostSubmit()" class="btn btn-danger">Yes</a>
-											<a href="/products/{{objPost._id}}/edit" class="btn btn-default">Cancel</a>
+											<a href="/manage/products/{{objPost._id}}/edit" class="btn btn-default">Cancel</a>
 										</p>
 									</div>
 									<p ng-if="isDeletePostSuccess" class="">Success</p>
