setup all urls with temp page templates

--- a/public/app/partials/forgot.html
+++ b/public/app/partials/forgot.html
@@ -14,8 +14,8 @@
 					<input type="submit" value="Send" class="btn btn-primary btn-block">
 				</p>
 				<p class="clearfix pad5 font12">
-					<a href="login">Login</a>
-					<a href="register" class="pull-right">Register</a>
+					<a href="/login">Login</a>
+					<a href="/register" class="pull-right">Register</a>
 				</p>
 			</div>
 		</form>
