--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -1,4 +1,4 @@
-<div class="row" ng-if="!me">
+<div class="row" ng-if="!rs_me">
 	<div class="col-xs-12">
 		<table class="homeTable">
 			<tr>
@@ -25,12 +25,12 @@
 </div>
 
 <div id="homeProducts">
-	<div class="page-wrap" ng-if="isLoggedIn && me && !isManage">
+	<div class="page-wrap" ng-if="isLoggedIn && rs_me && !rs_isManage">
 		<div class="page-body">
 			<div class="row"> 
 				<div class="col-md-4">
 					<div class="product-card">
-						<a href="#">
+						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
 								<span class="product-price">PHP <span>120</span></span>
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="product-card">
-						<a href="#">
+						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
 								<span class="product-price">PHP <span>120</span></span>
@@ -52,7 +52,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="product-card">
-						<a href="#">
+						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
 								<span class="product-price">PHP <span>120</span></span>
@@ -63,7 +63,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="product-card">
-						<a href="#">
+						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
 								<span class="product-price">PHP <span>120</span></span>
@@ -74,7 +74,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="product-card">
-						<a href="#">
+						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
 								<span class="product-price">PHP <span>120</span></span>
@@ -85,7 +85,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="product-card">
-						<a href="#">
+						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
 								<span class="product-price">PHP <span>120</span></span>
