--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,6 +27,8 @@ html(ng-app='starterApp')
         script(src='/app/controllers/ordersController.js') 
         script(src='/app/controllers/customersController.js') 
         script(src='/app/controllers/settingsController.js') 
+        script(src='/app/controllers/wishlistController.js') 
+        script(src='/app/controllers/cartController.js') 
     body
         .container(ng-controller='mainController')
             block content
