--- a/public/app/partials/settings/index.html
+++ b/public/app/partials/settings/index.html
@@ -55,6 +55,12 @@
 								</div>
 							</div>
 							<div class="form-card pad20">
+								<div class="row">
+									<div class="col-md-12">
+										<p ng-if="isSettingsSuccess" class="alert alert-success">Success</p>
+										<p ng-if="isSettingsError" class="alert alert-success">Error</p>
+									</div>
+								</div>
 								<div class="row"> 
 									<div class="col-md-12">
 										<input type="submit" value="Save Changes" class="btn btn-block btn-primary" ng-disabled="settingsForm.$invalid">
