store view, product card

--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -28,6 +28,249 @@
 	<div class="page-wrap" ng-if="isLoggedIn && rs_me && !rs_isManage">
 		<div class="page-body">
 			<div class="row"> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/1.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/2.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/3.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/4.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/5.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/6.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/7.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/8.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/9.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/10.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/1.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-4 col-sm-6">
+					<div class="product-card product-card-cool"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/2.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+			</div>
+
+			<div class="row"> 
 				<div class="col-md-4">
 					<div class="product-card">
 						<a href="/p/B1AUiUhl">
@@ -60,9 +303,13 @@
 							</span>
 						</a>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="product-card">
+				</div> 
+			</div>
+
+			<!-- 4 column -->
+			<div class="row">  
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
 						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
@@ -72,8 +319,8 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="product-card">
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
 						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
@@ -83,8 +330,19 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="product-card">
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
 						<a href="/p/B1AUiUhl">
 							<img src="/temp/carthtml/images/1.jpg">
 							<span class="product-meta clearfix">
