--- a/public/app/partials/products/view.html
+++ b/public/app/partials/products/view.html
@@ -1,33 +1,45 @@
 <div class="page-wrap">
 	<div class="page-body">
-		<div class="productview">
-			<div class="productview-head"> 
-				<h2>This is a product</h2>
-				<p><a href="/s/1"><img src="/temp/carthtml/images/1.jpg"> hahaStore</a></p> 
-			</div>
-			<div class="productview-body"> 
-				<div class="row">
-					<div class="col-sm-6">
-						<div class="productview-img">
-							<img src="/temp/carthtml/images/1.jpg"> 
-						</div>
+		<div class="row">
+			<div class="col-sm-7 col-md-8">
+				<div class="productview">
+					<div class="productview-head"> 
+						<h2>This is a product</h2> 
 					</div>
-					<div class="col-sm-6">
-						<div class="productview-img">
+					<div class="productview-body">  
+						<div class="productview-img mb20">
 							<img src="/temp/carthtml/images/1.jpg"> 
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12"> 
+						</div> 
 						<div class="productview-desc">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed architecto modi consectetur, vitae dignissimos non qui deserunt beatae ut dolor nemo id aliquid itaque, nihil commodi ipsum? Inventore, perferendis, voluptas.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed architecto modi consectetur, vitae dignissimos non qui deserunt beatae ut dolor nemo id aliquid itaque, nihil commodi ipsum? Inventore, perferendis, voluptas.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed architecto modi consectetur, vitae dignissimos non qui deserunt beatae ut dolor nemo id aliquid itaque, nihil commodi ipsum? Inventore, perferendis, voluptas.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed architecto modi consectetur, vitae dignissimos non qui deserunt beatae ut dolor nemo id aliquid itaque, nihil commodi ipsum? Inventore, perferendis, voluptas.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed architecto modi consectetur, vitae dignissimos non qui deserunt beatae ut dolor nemo id aliquid itaque, nihil commodi ipsum? Inventore, perferendis, voluptas.</p>
-						</div>
+						</div> 
 					</div>
+				</div>
+			</div>
+			<div class="col-sm-5 col-md-4">
+				<div class="productview-addtocart"> 
+					<div class="input-group input-group-sm mb5">
+						<input type="number" min="1" value="1" class="form-control text-center">
+						<span class="input-group-addon">x Php <strong>120</strong></span>
+					</div>
+					<input type="submit" value="Add to Cart" class="btn btn-primary btn-block">
+				</div>
+				<div class="productview-storeinfo"> 
+					<a href="#">
+						<img src="/temp/carthtml/images/1.jpg"> 
+						<strong>CoolStore101</strong>
+						<span>This is the store tagline</span>
+					</a>
+				</div>
+				<div class="productview-related"> 
+					related products
+				</div>
+				<div class="productview-reviews"> 
+					review
 				</div>
 			</div>
 		</div>
