--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,7 @@ html(ng-app='starterApp')
         script(src='/app/controllers/settingsController.js') 
         script(src='/app/controllers/wishlistController.js') 
         script(src='/app/controllers/cartController.js') 
+        script(src='/app/controllers/storeController.js') 
     body
         .container(ng-controller='mainController')
             block content
