--- a/public/app/partials/my/wishlist.html
+++ b/public/app/partials/my/wishlist.html
@@ -9,10 +9,10 @@
 					<div class="product-meta">
 						<h4 class="clearfix">
 							<span class="product-price">PHP <span>120</span></span>
-							<a href="/p/B1AUiUhl">This is a very cool leather bag</a>
+							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a href="/s/1">Store 123</a>
+							<a class="gray-text" href="/s/1">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -26,10 +26,10 @@
 					<div class="product-meta">
 						<h4 class="clearfix">
 							<span class="product-price">PHP <span>120</span></span>
-							<a href="/p/B1AUiUhl">This is a very cool leather bag</a>
+							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a href="/s/1">Store 123</a>
+							<a class="gray-text" href="/s/1">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -43,10 +43,10 @@
 					<div class="product-meta">
 						<h4 class="clearfix">
 							<span class="product-price">PHP <span>120</span></span>
-							<a href="/p/B1AUiUhl">This is a very cool leather bag</a>
+							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a href="/s/1">Store 123</a>
+							<a class="gray-text" href="/s/1">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -60,10 +60,10 @@
 					<div class="product-meta">
 						<h4 class="clearfix">
 							<span class="product-price">PHP <span>120</span></span>
-							<a href="/p/B1AUiUhl">This is a very cool leather bag</a>
+							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a href="/s/1">Store 123</a>
+							<a class="gray-text" href="/s/1">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
@@ -77,10 +77,10 @@
 					<div class="product-meta">
 						<h4 class="clearfix">
 							<span class="product-price">PHP <span>120</span></span>
-							<a href="/p/B1AUiUhl">This is a very cool leather bag</a>
+							<a class="black-text" href="/p/B1AUiUhl">This is a very cool leather bag</a>
 						</h4>
 						<p class="clearfix">
-							<a href="/s/1">Store 123</a>
+							<a class="gray-text" href="/s/1">Store 123</a>
 							<a href="#" class="pull-right text-danger ml10">Remove</a> 
 							<span class="padLR10 pull-right">&bull;</span>
 							<a href="#" class="pull-right text-success ml10">View</a>
