--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -28,6 +28,170 @@
 	<div class="page-wrap" ng-if="isLoggedIn && rs_me && !rs_isManage">
 		<div class="page-body">
 			<div class="row"> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/4.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/5.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/6.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/7.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+			</div>
+			<div class="row"> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/5.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/6.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/7.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+				<div class="col-md-3 col-sm-4">
+					<div class="product-card product-card-cool product-card-cool-sm"> 
+						<a href="/p/B1AUiUhl">
+							<span class="product-name">This is a very cool productThis is a very cool product</span>
+							<img src="/temp/carthtml/images/bags/8.jpg">
+						</a>
+						<div class="product-meta clearfix">
+							<div class="product-price">PHP <span>120</span></div>
+							<a class="product-view">
+								<i class="glyphicon glyphicon-share-alt"></i> View
+							</a>
+							<a class="product-like">
+								<i class="glyphicon glyphicon-heart"></i> 100
+							</a>
+							<a class="product-wishlist">
+								<i class="glyphicon glyphicon-gift"></i> Wishlist
+							</a>
+						</div> 
+					</div>
+				</div> 
+			</div>
+			<div class="row"> 
 				<div class="col-md-4 col-sm-6">
 					<div class="product-card product-card-cool"> 
 						<a href="/p/B1AUiUhl">
@@ -88,66 +252,8 @@
 						</div> 
 					</div>
 				</div> 
-				<div class="col-md-4 col-sm-6">
-					<div class="product-card product-card-cool"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/4.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-4 col-sm-6">
-					<div class="product-card product-card-cool"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/5.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-4 col-sm-6">
-					<div class="product-card product-card-cool"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/6.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
+			</div>
+			<div class="row"> 
 				<div class="col-md-4 col-sm-6">
 					<div class="product-card product-card-cool"> 
 						<a href="/p/B1AUiUhl">
@@ -207,67 +313,7 @@
 							</a>
 						</div> 
 					</div>
-				</div> 
-				<div class="col-md-4 col-sm-6">
-					<div class="product-card product-card-cool"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/10.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-4 col-sm-6">
-					<div class="product-card product-card-cool"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/1.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
-				<div class="col-md-4 col-sm-6">
-					<div class="product-card product-card-cool"> 
-						<a href="/p/B1AUiUhl">
-							<span class="product-name">This is a very cool productThis is a very cool product</span>
-							<img src="/temp/carthtml/images/bags/2.jpg">
-						</a>
-						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>120</span></div>
-							<a class="product-view">
-								<i class="glyphicon glyphicon-share-alt"></i> View
-							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
-							</a>
-							<a class="product-wishlist">
-								<i class="glyphicon glyphicon-gift"></i> Wishlist
-							</a>
-						</div> 
-					</div>
-				</div> 
+				</div>   
 			</div>
 
 			<div class="row"> 
@@ -305,8 +351,89 @@
 					</div>
 				</div> 
 			</div>
+			<div class="row"> 
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="product-card">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div> 
+			</div>
 
 			<!-- 4 column -->
+			<div class="row">  
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="product-card product-card-sm">
+						<a href="/p/B1AUiUhl">
+							<img src="/temp/carthtml/images/1.jpg">
+							<span class="product-meta clearfix">
+								<span class="product-price">PHP <span>120</span></span>
+								This is a very cool leather bag
+							</span>
+						</a>
+					</div>
+				</div>
+			</div>
 			<div class="row">  
 				<div class="col-md-3">
 					<div class="product-card product-card-sm">
