--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -143,7 +143,7 @@ table {
 	line-height: 24px;
 	background: #fff;
 	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 .product-card a {
 	text-decoration: none;
@@ -204,6 +204,9 @@ table {
 .product-card-list img {
 
 }
+.product-card-list a { 
+	text-decoration: none;
+}
 .product-card-list .product-meta {
 	margin-left: 60px; 
 }
@@ -252,6 +255,7 @@ table {
 .product-card.product-card-cool .product-meta {
 	padding: 0px;
 	margin: 0px;
+	border-top: 1px solid rgba(0,0,0,0.1);
 }
 .product-card.product-card-cool .product-price {
 	float: left;
@@ -285,6 +289,26 @@ table {
 	color: #fff;
 }
 
+.product-card.product-card-cool.product-card-cool-sm .product-name {
+	font-size: 14px;
+	line-height: 14px;
+}
+.product-card.product-card-cool.product-card-cool-sm .product-price {
+	font-size: 11px;
+	font-weight: normal;
+	padding: 2px 5px;
+	line-height: 12px;
+}
+.product-card.product-card-cool.product-card-cool-sm .product-price span { 
+	font-size: 11px;
+}
+.product-card.product-card-cool.product-card-cool-sm .product-like,
+.product-card.product-card-cool.product-card-cool-sm .product-wishlist,
+.product-card.product-card-cool.product-card-cool-sm .product-view {
+	font-size: 9px;
+	padding: 5px;
+    line-height: 10px;
+}
 /* product form */
 .productImage {
 	position: relative;
