--- a/public/app/partials/products/index.html
+++ b/public/app/partials/products/index.html
@@ -13,10 +13,10 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-4" ng-repeat="product in arrProducts">
+						<div class="col-md-3 col-sm-4 col-xs-6" ng-repeat="product in arrProducts">
 							<div class="product-card">
 								<a href="/manage/products/{{product._id}}/edit">
-									<img ng-src="/uploads/{{rs_me._id}}/products/{{product.images[0].img1 || product.images[0].img2 || product.images[0].img3 || product.images[0].img4 || 'none.jpg'}}">
+									<img ng-src="/uploads/{{rs_me._id}}/products/sm/{{product.images[0].img1 || product.images[0].img2 || product.images[0].img3 || product.images[0].img4 || 'none.jpg'}}">
 									<span class="product-meta clearfix">
 										<span class="product-price">PHP <span>{{product.price}}</span></span>
 										{{product.name}}
